--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
 							<h2>Bienvenidos</h2>
-							<h1>Power AE</h1>
+							<h1>Effectify.club</h1>
 							<p>Enciende tu creatividad<br />
 							Progresa en las Producciones.</p>
 							<ul class="actions">
